<resources>
    <string name="app_name">Sandwich Club</string>

    <!-- Detail Activity-->
    <string name="DetailActivity_detailAlsoKnownAsLabel">Also known as:</string>
    <string name="DetailActivity_detailPlaceOfOriginLabel">Place of origin:</string>
    <string name="DetailActivity_detailDescriptionLabel">Description:</string>
    <string name="DetailActivity_detailIngredientsLabel">Ingredients:</string>

    <!-- Content descriptions-->
    <string name="DetailActivity_sandwichPictureContentDescription">Sandwich picture</string>

    <!-- Error messages-->
    <string name="DetailActivity_detailErrorMessage">Sandwich data not available</string>


</resources>
