<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.sandwichclub.activities.DetailActivity"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/DetailActivity_pictureImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/DetailActivity_sandwichPictureContentDescription"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailActivity_detailAlsoKnownAsLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DetailActivity_alsoKnownTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailActivity_detailPlaceOfOriginLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DetailActivity_placeOriginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailActivity_detailIngredientsLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DetailActivity_ingredientsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DetailActivity_detailDescriptionLabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DetailActivity_descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

</ScrollView>
